Correction du header pour la bordure au moment du passage de la souris

--- a/css/style.css
+++ b/css/style.css
@@ -80,9 +80,12 @@ ul {
     padding: 30px 50px;
 }
 
-.active_page {
+nav ul li a:hover {
     border-top: #0065fc 2px solid;
     padding-top: 14px;
+}
+
+.active_page {
     color: #0065fc;
 }
 
