--- a/css/style.css
+++ b/css/style.css
@@ -133,15 +133,58 @@ nav ul li a:hover {
 }
 
 #button_search {
-    width: 132px;
     border-top-right-radius: 15px;
     border-bottom-right-radius: 15px;
     font-weight: bold;
     font-size: 18px;
+    padding: 15px 16px;
     border: none;
     background-color: #0065FC;
     color: white;
     cursor: pointer;
+}
+
+/****** Filters ******/
+
+.allFilters {
+    display: flex;
+    margin-bottom: 30px;
+    gap: 15px;
+    height: 50px;
+}
+
+.title_filters {
+    align-content: center;
+}
+
+.filters {
+    display: flex;
+    gap: 10px;
+    padding: 4px 19px;
+    border: 2px solid #f2f2f2;
+    border-radius: 25px;
+    align-items: center;
+    height: 38px;
+}
+
+.filters:hover {
+    background-color: #DEEBFF;
+}
+
+.information {
+    margin-bottom: 30px;
+    display: flex;
+}
+
+.information p {
+    align-content: center;
+}
+
+#icone_information {
+    border: 1px solid #D9D9D9;
+    border-radius: 25px;
+    margin-right: 10px;
+    padding: 4px 9px;
 }
 
 /****** Hebergements And Populaires ***********/
