--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,10 @@ body {
     box-sizing: border-box;
 }
 
+.search_and_filters {
+    margin-bottom: 35px;
+}
+
 a {
     color: inherit;
     text-decoration: none;
@@ -177,12 +181,7 @@ nav ul li a:hover {
 }
 
 .information {
-    margin-bottom: 30px;
     display: flex;
-}
-
-.information p {
-    align-content: center;
 }
 
 #icone_information {
@@ -196,6 +195,7 @@ nav ul li a:hover {
 .hebergements-and-populaires {
     display: flex;
     justify-content: space-between;
+    margin-bottom: 35px;
 }
 
 .hebergements-and-populaires section {
@@ -293,7 +293,40 @@ nav ul li a:hover {
     margin-bottom: 5px;
 }
 
+/****** Activites  ******/
 
+.activities {
+    margin-bottom: 35px;
+    padding: 30px;
+}
+
+.activities h2 {
+    margin-bottom: 30px;
+}
+
+.activities-cards {
+    display: flex;
+    gap: 30px;
+}
+
+.activities-cards .card {
+    display: flex;
+    flex-direction: column;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    width: calc(25% - 30px);
+}
+
+.activities-cards img {
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    height: 380px;
+}
+
+.activities-cards .card h3 {
+    padding: 20px 19px;
+    font-size: 16px;
+}
 
 
 /* Le code ci-dessous correspond à la version responsive uniquement */
